--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.66.1",
+    "aws-xray-sdk": "^3.4.1",
     "constructs": "^10.0.0",
     "dotenv": "^16.0.3",
     "source-map-support": "^0.5.21"
